force-app/main/default/objects/API_ID_Verification_Check_Result__c/API_ID_Verification_Check_Result__c.object-meta.xml
<CustomObject>
    <label>API ID Verification Check Result</label>
    <nameField>
        <label>API ID Verification Check Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API ID Verification Check Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>