force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>address</label>
    <type>Checkbox</type>
</CustomField>