force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>gender</label>
    <type>Checkbox</type>
</CustomField>