force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/http_code__c.field-meta.xml
<CustomField>
    <fullName>http_code__c</fullName>
    <label>http_code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>