force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/marital_status__c.field-meta.xml
<CustomField>
    <fullName>marital_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>marital_status</label>
    <type>Checkbox</type>
</CustomField>