force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/mother_name__c.field-meta.xml
<CustomField>
    <fullName>mother_name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mother_name</label>
    <type>Checkbox</type>
</CustomField>