force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>name</label>
    <type>Checkbox</type>
</CustomField>