force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/name_threshold__c.field-meta.xml
<CustomField>
    <fullName>name_threshold__c</fullName>
    <label>name_threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>