force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/nik__c.field-meta.xml
<CustomField>
    <fullName>nik__c</fullName>
    <defaultValue>false</defaultValue>
    <label>nik</label>
    <type>Checkbox</type>
</CustomField>