force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/occupation__c.field-meta.xml
<CustomField>
    <fullName>occupation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>occupation</label>
    <type>Checkbox</type>
</CustomField>