force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/score__c.field-meta.xml
<CustomField>
    <fullName>score__c</fullName>
    <label>score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>