force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/valid__c.field-meta.xml
<CustomField>
    <fullName>valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>valid</label>
    <type>Checkbox</type>
</CustomField>