force-app/main/default/objects/API_ID_Verification_Check_Result__c/fields/vendor__c.field-meta.xml
<CustomField>
    <fullName>vendor__c</fullName>
    <label>vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>